Add training registration API
