# internal/mededu/model_registration_input.go
@@ -1,0 +1,26 @@
+/*
+ * MedEdu API
+ *
+ * API pre spravu katalogu internych skoleni nemocnicneho personalu.
+ *
+ * API version: 1.0.0
+ * Contact: xcervenkak@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mededu
+
+type RegistrationInput struct {
+	EmployeeId string `json:"employeeId"`
+
+	EmployeeName string `json:"employeeName"`
+
+	EmployeeEmail string `json:"employeeEmail,omitempty"`
+
+	Department string `json:"department,omitempty"`
+
+	Note string `json:"note,omitempty"`
+
+	// Volitelny cielovy termin pri presune existujucej registracie.
+	TargetTrainingId string `json:"targetTrainingId,omitempty"`
+}
