# internal/mededu/model_registration_status.go
@@ -1,0 +1,19 @@
+/*
+ * MedEdu API
+ *
+ * API pre spravu katalogu internych skoleni nemocnicneho personalu.
+ *
+ * API version: 1.0.0
+ * Contact: xcervenkak@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mededu
+
+type RegistrationStatus string
+
+// List of RegistrationStatus
+const (
+	REGISTERED RegistrationStatus = "registered"
+	WAITLISTED RegistrationStatus = "waitlisted"
+)
